--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -52,6 +52,7 @@ app_setup_block: |
 
 # changelog
 changelogs:
+  - { date: "22.02.19:", desc: "Rebasing to alpine 3.9." }
   - { date: "31.01.19:", desc: "Add pipeline logic and multi arch." }
   - { date: "30.01.19:", desc: "Add push and clientbuffer modules." }
   - { date: "17.08.18:", desc: "Rebase to alpine 3.8, use buildstage." }
