Change to http by default
Make http default install to fit in with reverse proxy not using double SSL.  Won't affect existing installs

--- a/readme-vars.yml
+++ b/readme-vars.yml
@@ -44,7 +44,7 @@ optional_block_1: false
 # application setup block
 app_setup_block_enabled: true
 app_setup_block: |
-  To log in to the application, browse to https://<hostip>:6501.
+  To log in to the application, browse to http://<hostip>:6501.
 
   * Default User: admin
   * Default Password: admin
