--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,4 +1,4 @@
-FROM lsiobase/alpine:arm64v8-3.12 as buildstage
+FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.12 as buildstage
 ############## build stage ##############
 
 # package version
@@ -92,7 +92,7 @@ RUN \
 	>> /tmp/znc/packages
 ############## runtime stage ##############
 
-FROM lsiobase/alpine:arm64v8-3.12
+FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.12
 
 # set version label
 ARG BUILD_DATE
