--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -6,11 +6,16 @@ FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.19 as buildstage
 # package version
 ARG ZNC_RELEASE
 
+# common env
+ENV \
+  MAKEFLAGS="-j4"
+
 RUN \
-  echo "**** install build packages ****" && \
   apk add -U --update --no-cache \
+    argon2-dev \
     autoconf \
     automake \
+    boost-dev\
     build-base \
     c-ares-dev \
     cyrus-sasl-dev \
@@ -21,7 +26,11 @@ RUN \
     perl-dev \
     python3-dev \
     swig \
-    tcl-dev
+    tar \
+    tcl-dev && \
+  python3 -m venv /lsiopy && \
+  pip install -U --no-cache-dir pip setuptools && \
+  pip install -U --no-cache-dir cmake
 
 RUN \
   echo "**** compile znc ****" && \
@@ -62,26 +71,18 @@ RUN \
   /tmp/znc-palaver.tar.gz -C \
     /tmp/znc/modules --strip-components=1 && \
   cd /tmp/znc && \
-  export CFLAGS="$CFLAGS -D_GNU_SOURCE" && \
-  ./configure \
-    --build=$CBUILD \
-    --enable-cyrus \
-    --enable-perl \
-    --enable-python \
-    --enable-swig \
-    --enable-tcl \
-    --host=$CHOST \
-    --infodir=/usr/share/info \
-    --localstatedir=/var \
-    --mandir=/usr/share/man \
-    --prefix=/usr \
-    --sysconfdir=/etc && \
+  mkdir -p build && \
+  cd build && \
+  cmake .. \
+    -DWANT_PYTHON=yes \
+    -DWANT_PERL=yes \
+    -DWANT_TCL=yes && \
   make && \
   make DESTDIR=/tmp/znc install
 
 RUN \
   echo "**** determine runtime packages ****" && \
-  scanelf --needed --nobanner /tmp/znc/usr/bin/znc \
+  scanelf --needed --nobanner /tmp/znc/usr/local/bin/znc \
     | awk '{ gsub(/,/, "\nso:", $2); print "so:" $2 }' \
     | sort -u \
     | xargs -r apk info --installed \
@@ -95,7 +96,7 @@ FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.19
 ARG BUILD_DATE
 ARG VERSION
 LABEL build_version="Linuxserver.io version:- ${VERSION} Build-date:- ${BUILD_DATE}"
-LABEL maintainer="sparklyballs"
+LABEL maintainer="notaptalca"
 
 # copy files from build stage
 COPY --from=buildstage /tmp/znc/usr/ /usr/
