--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.20 as buildstage
+FROM ghcr.io/linuxserver/baseimage-alpine:arm64v8-3.20 AS buildstage
 ############## build stage ##############
 
 # package version
