fix missing module dependencies

--- a/Dockerfile.aarch64
+++ b/Dockerfile.aarch64
@@ -78,7 +78,7 @@ RUN \
 
 RUN \
   echo "**** determine runtime packages ****" && \
-  scanelf --needed --nobanner /tmp/znc/usr/local/bin/znc \
+  scanelf --needed --nobanner /tmp/znc/usr/local/bin/znc /tmp/znc/usr/local/lib/znc/ \
     | awk '{ gsub(/,/, "\nso:", $2); print "so:" $2 }' \
     | sort -u \
     | xargs -r apk info --installed \
